--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
 @import url('https://fonts.cdnfonts.com/css/poppins');
-/* Base styles */
-body, html {
+
+html, body {
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: 'Poppins', sans-serif;
 }
 
-/* Header styles */
 header {
+    position: sticky;
+    top: 0;
+    z-index: 3;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #202020; /* Adjust the color to match the mockup */
+    background-color: #202020;
     padding: 0.20rem 2rem;
 }
 
@@ -36,14 +38,14 @@ nav ul li {
 }
 
 nav a {
-    color: #ddd; /* Light grey text, adjust if necessary */
+    color: #ddd;
     text-decoration: none;
     font-size: 1rem;
     transition: color 0.3s ease;
 }
 
 nav a:hover {
-    color: #fff; /* Brighter white on hover */
+    color: #fff;
 }
 
 .hero-container {
@@ -120,7 +122,7 @@ nav a:hover {
 }
 
 .btn:hover {
-    background-color: rgb(73, 73, 73); /* Darker orange on hover */
+    background-color: rgb(73, 73, 73);
 }
 
 .main-content {
@@ -138,14 +140,14 @@ nav a:hover {
 
 .info-box {
     flex: 1;
-    margin: 0 1em; /* Spacing between boxes */
+    margin: 0 1em;
     padding: 1em;
     background-color: #202020;
     border: 1px solid #444;
     border-radius: 8px;
     box-sizing: border-box;
     color: #ccc;
-    text-align: center; /* Center the content */
+    text-align: center;
     height: 260px;
 }
 
@@ -186,20 +188,20 @@ nav a:hover {
 
 @media (max-width: 768px) {
     .info-sections {
-        flex-direction: column; /* Stack the boxes on smaller screens */
+        flex-direction: column;
         align-items: center;
     }
 
     .info-box {
-        width: 80%; /* Adjust width on smaller screens */
-        margin-bottom: 1em; /* Spacing between stacked boxes */
+        width: 80%;
+        margin-bottom: 1em;
     }
 }
 
 @media (max-width: 480px) {
     .info-box {
-        width: 100%; /* Full width on very small screens */
-        border-radius: 0; /* No rounded corners for full-width */
+        width: 100%;
+        border-radius: 0;
     }
 }
 
@@ -208,26 +210,28 @@ nav a:hover {
     border-radius: 4px;
     color: white;
     font-weight: bold;
-    display: inline-block; /* or 'block' if you prefer */
+    display: inline-block;
     margin-bottom: 1em;
 }
 
 .online {
-    background-color: #28a745; /* Green for online */
+    background-color: #28a745;
 }
 
 .offline {
-    background-color: #dc3545; /* Red for offline */
+    background-color: #dc3545;
 }
 
 .content-container {
-    background-color: #333; /* Semi-transparent black background */
+    background-color: #333;
     padding: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    color: #fff; /* White text */
-    max-width: 864px; /* Set a max-width for readability */
-    margin: 0px auto; /* Center the container */
+    color: #fff;
+    max-width: 864px;
+    margin: 0px auto;
+    position: relative;
+    padding-bottom: 10px;
 }
 
 .content-container h1 {
@@ -243,11 +247,14 @@ nav a:hover {
 
 .content-container p, .content-container ul {
     text-align: left;
-    line-height: 1.6; /* Improve readability */
+    line-height: 1.8;
+    border-bottom: 2px solid transparent;
+    border-image: linear-gradient(to left, transparent, #dfdfdf, transparent) 2;
+    padding: 10px;
 }
 
 .content-container strong {
-    color: #979393; /* A distinct color for key terms */
+    color: #979393;
 }
 
 .discord-invite {
